Temporary fix to vertical align controls at top of scene view

--- a/src/Components/3DV/SceneView.scss
+++ b/src/Components/3DV/SceneView.scss
@@ -12,6 +12,6 @@
     display: flex;
     left: 20px;
     position: absolute;
-    top: 4px;
+    top: 10px;
     z-index: 1;
 }
