--- a/src/Components/ADT3DViewer/ADT3DViewer.scss
+++ b/src/Components/ADT3DViewer/ADT3DViewer.scss
@@ -45,5 +45,5 @@
 .cb-layer-dropdown-container {
     position: absolute;
     right: 200px;
-    top: 8px;
+    top: 10px;
 }
